results/generations/youra/sonnet45_no_reflection/iclr2025_bi_align/docs/youra_research/2026_bi_align/h-e1/code/experiment.log
  File "/home/anonymous/YouRA_results_new_4_sonnet45_no_reflection/TEST_bi_align_sonnet45_no_reflection/docs/youra_research/20260511_bi_align/h-e1/code/main_poc.py", line 215
    """
       ^
SyntaxError: f-string expression part cannot include a backslash
